<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/food"
                    android:textColor="@color/blue_grey"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app"
                    android:textColor="@color/blue_grey"
                    android:textSize="45sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/blue_grey"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/red_button_background"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/are_you_member_login"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>