<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Tour"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firebaseTourImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/firebaseTourImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="63dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebaseTourImage">

        <EditText
            android:id="@+id/tourTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tourLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tourDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColorHint="@color/blue_grey" />

        <EditText
            android:id="@+id/tourBed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/no_of_beds"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tourPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/price_usd"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/blue_grey"
            android:textColorHint="@color/blue_grey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/hasWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/has_wifi" />

            <CheckBox
                android:id="@+id/hasGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/has_guide" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/select_category"
            app:hintTextColor="@color/blue_grey">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="none">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/blue_grey"
                android:layout_weight="1"
                android:text="@string/select_image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateTourBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="Update Tour" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>